--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "dev-server": "webpack-dev-server",
+    "dev-server": "webpack-dev-server --open",
     "fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' "
   },
   "babel": {
